--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,7 +1,6 @@
 add_library(Engine Engine.cpp)
 add_library(restpp SHARED restpp.cc)
 target_link_libraries(restpp
-        "-Wl,--whole-archive"
         Engine
-        "-Wl,--no-whole-archive"
+        ${Boost_LIBRARIES}
         )
