handle session and call handle requests;

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -3,4 +3,5 @@ add_library(restpp SHARED restpp.cc)
 target_link_libraries(restpp
         Engine
         ${Boost_LIBRARIES}
+        glog
         )
