get target and method for request;

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,6 +1,9 @@
-add_library(Engine Engine.cpp)
+add_library(Engine Engine.cpp )
+add_library(Request Request.cpp)
+
 add_library(restpp SHARED restpp.cc)
 target_link_libraries(restpp
+        Request
         Engine
         ${Boost_LIBRARIES}
         glog::glog
