build only one shared library;

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,10 +1,11 @@
-add_library(Engine Engine.cpp )
-add_library(Request Request.cpp)
+#add_library(Engine Engine.cpp )
+#add_library(Request Request.cpp)
+#add_library(Response Response.cpp)
 
-add_library(restpp SHARED restpp.cc)
+add_library(restpp SHARED restpp.cc
+        Engine.cpp Response.cpp Response.cpp RequestHandler.cpp
+        )
 target_link_libraries(restpp
-        Request
-        Engine
         ${Boost_LIBRARIES}
         glog::glog
         )
