link libraries has some warnings;

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,13 +1,9 @@
-#add_library(Engine Engine.cpp )
-#add_library(Request Request.cpp)
-#add_library(Response Response.cpp)
-
 add_library(restpp SHARED restpp.cc
         Engine.cpp Response.cpp Response.cpp RequestHandler.cpp
         )
-target_link_libraries(restpp
-        ${Boost_LIBRARIES}
+target_link_libraries(restpp PRIVATE
         glog::glog
+        ${Boost_LIBRARIES}
         )
 
 
