add log for register a route;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ SET(BOOST_REQUIRED_COMPONENTS
         unit_test_framework
         )
 
-find_package(Boost 1.70 COMPONENTS ${BOOST_REQUIRED_COMPONENTS} REQUIRED)
+find_package(Boost COMPONENTS ${BOOST_REQUIRED_COMPONENTS} REQUIRED)
 message(STATUS "** Boost Include: ${Boost_INCLUDE_DIR}")
 message(STATUS "** Boost Libraries: ${Boost_LIBRARY_DIRS}")
 message(STATUS "** Boost Libraries: ${Boost_LIBRARIES}")
